Task instance Java/30